# sicilia

./: README.md
PHP_GD/: Img.php
QuizDataManager-haskell/: .gitignore  QuizDataManager.cabal  README.md  stack.yaml
QuizDataManager-haskell/app/: Main.hs
QuizDataManager-haskell/src/QuizData/: MetaData.hs  Persist.hs  Register.hs  Types.hs
QuizDataManager-haskell/src/TPHelper/: Core.hs
QuizDataManager-haskell/src/Util/: Either.hs
Youjo/: README.md
Youjo/Youjo/: Applicative.hs  Castator.hs  Char.hs  DList.hs  Foldable.hs  List.hs  Matrix.hs  Nest.hs  Power.hs  String.hs  Traversable.hs  Tuple.hs
Youjo/Youjo/Applicative/: Operator.hs
Youjo/Youjo/BMS/: BMS.hs
Youjo/Youjo/Chem/: Atom.hs  Bravais.hs  Cube.hs  Lattice.hs  XYZ.hs
Youjo/Youjo/Chem/Cube/: RawCube.hs
Youjo/Youjo/Math/: Quaternion.hs
Youjo/Youjo/Monad/: Operator.hs
Youjo/Youjo/Nest/: HNest.hs
Youjo/Youjo/Trash/: Buildable.hs  DoubleList.hs  Loop.hs  Metric.hs  Transtest.hs  Unfoldable.hs  fvector.hs  interrupt.hs  power_test.hs
dotfiles-old/: .gitignore  README.md  setup.bat  setup.sh
dotfiles-old/bash/: bash_logout  bash_profile  bashrc
dotfiles-old/bash/bashes/: bash_aliases  bash_exports  bash_funcs
dotfiles-old/fish/: config.fish
dotfiles-old/fish/functions/: :e.fish  a.fish  annihilate.fish  c.fish  ca.fish  cal.fish  cb.fish  cn.fish  gv.fish  l.fish  la.fish  ll.fish  nvcd.fish  rm.fish  sdk.fish  v.fish  vi.fish
dotfiles-old/neovim/: init.vim
dotfiles-old/neovim/dein_toml/: dein.toml  dein_lazy.toml
dotfiles-old/neovim/ftplugin/: go.vim  make.vim
dotfiles-old/vim/: vimrc
dotfiles-old/vim/dein_toml/: dein.toml
dotfiles-old/vim/ftplugin/: go.vim  haskell.vim  make.vim
nekonoshiri.github.io-old/: README.md  index.html
nekonoshiri.github.io-old/css/: style.css
nekonoshiri.github.io-old/qma/: ashikascs.html  ashikascs.js  decode.html  decode.js
parsePNG/: PNG.hs
pouch/: .gitignore  README.md  glide.yaml  main.go
pouch/cmd/: add.go  clean.go  compress.go  info.go  list.go  pop.go  root.go
pouch/cmd/util/: util.go
process-engineering/: README.md  butadiene1.d  butadiene2.d  de.d  mitsuitoatsuA.hs  unit.d  urea1.d  urea1_other.d  urea2.d
tiny-proto-parser/: .gitignore  README.md  stack.yaml  tiny-proto-parser.cabal
tiny-proto-parser/src/Text/TinyProto/: Language.hs  Parser.hs
tiny-proto-parser/test/: Test.hs  test.proto
(+3 files in other folders)
