name:                QuizDataManager
version:             0.1.0.0
-- homepage:
-- license:
-- license-file:
-- author:
-- maintainer:
-- copyright:
-- category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     QuizData.MetaData
                     , QuizData.Register
                     , TPHelper.Core
                     , Util.Either
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , threepenny-gui
                     , transformers
  default-language:    Haskell2010

executable run
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall -fno-warn-unused-do-bind
                       -O
  build-depends:       base
                     , transformers
                     , threepenny-gui
                     , QuizDataManager
  default-language:    Haskell2010
