name:                tiny-proto-parser
version:             0.0.1.0
synopsis:            tiny-proto parser
description:
  tiny-proto parser
  .
-- homepage:
-- package-url:
-- bug-reports:
-- license:
-- license-file:
-- author:
-- maintainer:
-- copyright:
-- build-type:          Simple
-- extra-source-files:  README.md, test/test.proto
-- cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.TinyProto.Parser
                     , Text.TinyProto.Language
  build-depends:       base >= 4.8 && < 5
                     , parsec >= 3.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4.8 && < 5
                     , parsec >= 3.1
                     , tiny-proto-parser
  ghc-options:         -Wall
  default-language:    Haskell2010

-- source-repository head
--  type:     git
--  location: https://github.com/nekonoshiri/sicilia/tiny-proto-parser
